Fix overflow issues in Carousel cards.

--- a/src/scss/layout/_card.scss
+++ b/src/scss/layout/_card.scss
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     position: relative;
+    max-width: 100%;
 }
 
 .card {
@@ -62,6 +63,7 @@
         font-weight: 300;
         color: rgba(255, 255, 255, 0.72);
         // white-space: break-spaces;
+        white-space: pre-wrap;
     }
 
     &__btn {
