--- a/src/scss/layout/_carousel.scss
+++ b/src/scss/layout/_carousel.scss
@@ -1,5 +1,6 @@
 .carousel {
   width: 100%;
+  max-width: 100%;
   overflow: hidden;
 }
 
